# ariadne

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  TODO.md  profile.json
.github/workflows/: ci.yml  main.yml
ci/: _lib.py  main.py  main.tir.json  profile.json
crates/ariadne-py/: Cargo.toml
crates/ariadne-py/src/: lib.rs
crates/loom/: Cargo.toml
crates/loom/src/: lib.rs  main.rs
crates/loom/tests/: integration.rs
frontends/python/: README.md  pyproject.toml  ruff.toml
frontends/python/ariadne/: __init__.py  _api.py  _decorators.py  _emit.py  _graph.py  _handle.py  _impl.py  _types.py  artifacts.py  coordination.py  inventory.py  lowerings.py  on.py  resources.py  testing.py
frontends/python/ariadne/actions/: __init__.py  build.py  coverage.py  docs.py  fmt.py  forge.py  package.py  scan.py  scm.py  sign.py  test.py
frontends/python/tests/: test_cost_objectives.py  test_dependencies.py  test_e2e.py  test_emit.py  test_gating.py  test_graph.py  test_pipeline.py  test_testing.py  test_tools.py  test_triggers.py
frontends/python/thread/: __init__.py  _api.py  _decorators.py  _emit.py  _graph.py  _handle.py  _impl.py  _types.py
src/: analysis.rs  cost.rs  dependency.rs  diagnostics.rs  docs.rs  ir.rs  lib.rs  optimize.rs  planner.rs  profile.rs  proto.rs  select.rs  telemetry.rs  testing.rs  toolchain.rs  validate.rs
src/backends/: external.rs  mod.rs  registry.rs  renderers.rs
src/backends/github/: collect.rs  instructions.rs  mod.rs
src/backends/local/: exec.rs  instructions.rs  mod.rs  runtime.rs
src/lowering/: build.rs  coverage.rs  docs.rs  fmt.rs  forge.rs  mod.rs  package.rs  scan.rs  scm.rs  sign.rs  test.rs
src/optimize/: actor.rs  colocation.rs  dedup.rs  fusion.rs  parallelization.rs  placement.rs  sibling_fusion.rs
src/specifications/: coverage.rs  mod.rs  package.rs  scan.rs  scm.rs  test.rs
tests/: emit.rs  fixture_suite.rs  validation.rs
tests/fixtures/: simple-build-test.tir.json
tests/fixtures/loom-test/: effect-gated-on-pr.json  failure-skips-downstream.json  fork-pr-withholds-secrets.json  mount-transfer.json  pass.json  plan-assertions.json
tests/golden/: simple-build-test.yaml
