[workspace]
members = [".", "crates/loom", "crates/ariadne-py"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
ariadne    = { path = "." }
prost      = "0.13"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap   = { version = "2", features = ["serde"] }
clap       = { version = "4", features = ["derive"] }
ustr       = { version = "1", features = ["serde"] }
bitflags   = "2"
chrono     = { version = "0.4", default-features = false, features = ["std", "alloc"] }

[package]
name = "ariadne"
version.workspace = true
edition.workspace = true
autobins = false

[lib]
name = "ariadne"
path = "src/lib.rs"

[dependencies]
prost      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
indexmap   = { workspace = true }
ustr       = { workspace = true }
bitflags   = { workspace = true }
chrono     = { workspace = true }
humantime  = "2"
