[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thread"
version = "0.1.0"
description = "Python frontend for Thread IR (Ariadne)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["thread"]

[tool.pytest.ini_options]
testpaths = ["tests"]
